@@ -22,7 +22,6 @@ ideas for future versions:
   [ ] deployment arrows shall be shown like contaiments (check what to do in case of multiple depoyment targets...)
   @io
   [ ] export formats: enhance xmi standard compliance
-  [?] how to exclude diagrams from export? some are unimportant and exist just for completeness
   [ ] import XMI format
   [ ] xmi export is not spec-compliant for uml:Port, provided and required Interfaces
   [ ] xmi export: improve error message if exported file exists and is read-only
@@ -30,12 +29,12 @@ ideas for future versions:
   [?] some diagrams exist for completeness only - but do not contain important information. These shall be greyed out.
       --> add a "display_flags" field to "diagrams"
   [ ] performance optimization: possibly the feature and relationship filter on a visible_set is slow?
-  [?] diagrams need some kind of classification/stereotype like idea-for-future, rejected-alternative, ...
+  [?] diagrams need some kind of category/classification/stereotype like idea-for-future, rejected-alternative, ...
       --> add a "stereotype" field to "diagrams"
   [ ] some way to compare two database files / and/or to merge
   [ ] links unclear: interactionuse(diag-reference)-to-fragment(diag); part-to-component, object-to-class
   [ ] links unclear: provided/required-interface(feature)-to-interface(classifier)
-  [?] features can have stereotypes, see UML spec 2.5.1 chapter 11.4.5
+  [?] features can have stereotypes, see UML spec 2.5.1 chapter 11.4.5 (maybe use existing value-type?)
   @ctrl
   @universal+utf8stringbuf
   [ ] combine the static string allocation with dynamic additional buffers for unexpectedly-long strings
